added my second and the third website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <div>
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, architecto. Dolor accusamus amet deleniti dolorum? Vitae maxime, molestiae sint quo quisquam repudiandae nostrum possimus ut voluptatibus. Culpa quas debitis dolor.</p>
+    </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque consectetur quis itaque debitis. Vero autem, natus dolorem enim incidunt, doloremque dolorum, pariatur eos reiciendis laborum optio doloribus alias esse quae.</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla aperiam sapiente in eligendi! Reprehenderit ducimus distinctio earum tempore soluta. Omnis exercitationem molestias culpa est facilis ipsam commodi quos inventore voluptate!</p>
     </div>    
 </body>
 </html>
