added a list to push a code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <div>
         <h3>My third website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla aperiam sapiente in eligendi! Reprehenderit ducimus distinctio earum tempore soluta. Omnis exercitationem molestias culpa est facilis ipsam commodi quos inventore voluptate!</p>
+    </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit"</li>
+            <li>git push</li>
+        </ul>
     </div>    
 </body>
 </html>
