added birds fly

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <li>git commit -m"add a meaningful commit"</li>
             <li>git push</li>
         </ul>
+    </div>
+    <div>
+        <h3>birds fly</h3>
+        <img src="images/pngimg.com - birds_PNG115.png" alt="">
     </div>    
 </body>
 </html>
